add header section

--- a/index.html
+++ b/index.html
@@ -11,6 +11,25 @@
     <link rel="stylesheet" href="./styles/media.css">
 </head>
 <body>
+
+    <header>
+        
+        <a href="#home" class="logo">
+            Maksym <span>Paramud</span>
+        </a>
+
+        <nav>
+            <a href="#home">Home</a>
+            <a href="#about">About</a>
+            <a href="#projects">Projects</a>
+        </nav>
+
+        <button class="btn-contact">
+            <a href="#contact">Contact</a>
+        </button>
+    </header>
+
+
     <script src="./script.js"></script>
 </body>
 </html>
