style: add styles for header

--- a/index.html
+++ b/index.html
@@ -24,9 +24,12 @@
             <a href="#projects">Projects</a>
         </nav>
 
-        <button class="btn-contact">
-            <a href="#contact">Contact</a>
-        </button>
+        <a href="#contact">
+            <button class="btn-contact">
+                Contact
+            </button>
+        </a>
+
     </header>
 
 
