--- a/index.html
+++ b/index.html
@@ -32,6 +32,28 @@
 
     </header>
 
+    <section class="home">
+
+        <h1>Hi, it's <span>Maksym</span></h1>
+        <h3>I'm a <span>Frontend Developer</span></h3>
+        <p>
+            Hi! I'm Maksym — a frontend developer passionate about creating responsive, user-friendly, and visually engaging web interfaces. I work with HTML, CSS, JavaScript, Bootstrap, Sass, Git, and GitHub. I value clean, maintainable code,pixel-perfect design, and continuous learning. I'm always open to exciting new projects and collaborations.
+        </p>
+
+        <div class="icons-container">
+            <a href="https://t.me/Maksym525252" target="_blank" rel="noopener noreferrer">
+                <img src="./images/icons8-telegram.svg" alt="Telegram icon" height="50px">
+            </a>
+            <a href="https://wa.me/393331060923" target="_blank" rel="noopener noreferrer">
+                <img src="./images/icons8-whatsapp.svg" alt="WhatsApp icon" height="50px">
+            </a>
+            <a href="https://github.com/maksymParamud" target="_blank" rel="noopener noreferrer">
+                <img src="./images/icons8-github.svg" alt="icon-github" height="50px">         
+            </a>
+        </div>
+
+    </section>
+
 
     <script src="./script.js"></script>
 </body>
