--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
     </header>
 
-    <section class="home">
+    <section class="home" id="home">
 
         <h1>Hi, it's <span>Maksym</span></h1>
         <h3>I'm a <span>Frontend Developer</span></h3>
@@ -51,6 +51,22 @@
                 <img src="./images/icons8-github.svg" alt="icon-github" height="50px">         
             </a>
         </div>
+
+    </section>
+
+
+    <section id="about" class="about">
+
+    <h2>About Me</h2>
+    <p>
+        I'm Maksym — a <span>frontend developer</span> with over <span>2 years of learning experience</span> and <span>1 year of practical work</span>. I specialize in building responsive, user-friendly, and visually appealing web interfaces using <span>HTML, CSS, JavaScript</span>, and modern tools like <span>Git, Sass, and Bootstrap</span>.
+    </p>
+    <p>
+        I'm passionate about clean code and continuous learning. I enjoy exploring new technologies and constantly aim to improve both the functionality and design of the web experiences I create.
+    </p>
+    <p>
+        Outside of coding, I love traveling, listening to music, reading books, playing video games, and staying active through sports — especially swimming and volleyball.
+    </p>
 
     </section>
 
