--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <h1>Hi, it's <span>Maksym</span></h1>
         <h3>I'm a <span>Frontend Developer</span></h3>
         <p>
-            Hi! I'm Maksym — a frontend developer passionate about creating responsive, user-friendly, and visually engaging web interfaces. I work with HTML, CSS, JavaScript, Bootstrap, Sass, Git, and GitHub. I value clean, maintainable code,pixel-perfect design, and continuous learning. I'm always open to exciting new projects and collaborations.
+            Hi! I'm Maksym — a frontend developer passionate about creating responsive, user-friendly, and visually engaging web interfaces. I work with HTML, CSS, JavaScript, Jquery, JSON, Bootstrap, Sass, Git, and GitHub. I value clean, maintainable code,pixel-perfect design, and continuous learning. I'm always open to exciting new projects and collaborations.
         </p>
 
         <div class="icons-container">
@@ -57,16 +57,71 @@
 
     <section id="about" class="about">
 
-    <h2>About Me</h2>
-    <p>
-        I'm Maksym — a <span>frontend developer</span> with over <span>2 years of learning experience</span> and <span>1 year of practical work</span>. I specialize in building responsive, user-friendly, and visually appealing web interfaces using <span>HTML, CSS, JavaScript</span>, and modern tools like <span>Git, Sass, and Bootstrap</span>.
-    </p>
-    <p>
-        I'm passionate about clean code and continuous learning. I enjoy exploring new technologies and constantly aim to improve both the functionality and design of the web experiences I create.
-    </p>
-    <p>
-        Outside of coding, I love traveling, listening to music, reading books, playing video games, and staying active through sports — especially swimming and volleyball.
-    </p>
+    <div class="about-content">
+
+        <h2>About Me</h2>
+        <p>
+            I'm Maksym — a <span>frontend developer</span> with over <span>2 years of learning experience</span> and <span>1 year of practical work</span>. I specialize in building responsive, user-friendly, and visually appealing web interfaces using <span>HTML, CSS, JavaScript</span>, and modern tools like <span>Git, Sass, and Bootstrap</span>.
+        </p>
+        <p>
+            I'm passionate about clean code and continuous learning. I enjoy exploring new technologies and constantly aim to improve both the functionality and design of the web experiences I create.
+        </p>
+        <p>
+            Outside of coding, I love traveling, listening to music, reading books, playing video games, and staying active through sports — especially swimming and volleyball.
+        </p>     
+
+    </div>
+
+
+
+    </section>
+
+    <section class="projects" id="projects">
+
+        <h2 class="heading">My Projects</h2>
+
+        <div class="projects-box">
+
+            <div class="project-card">
+                <img src="./images/Screenshot 2025-06-26 114318.png" alt="img">
+                <h4>Responsive Landing Page</h4>
+                <p>This is a responsive landing page built with HTML, CSS, and JavaScript.
+                    The project demonstrates my ability to create modern, responsive interfaces with clean design, media queries, and basic interactivity using JavaScript (burger menu).
+                </p>
+                <a href="https://maksymparamud.github.io/responsive-landing-page/" target="_blank">
+                    <button>
+                        Review Project
+                    </button>
+                </a>
+            </div>
+
+            <div class="project-card">
+                <img src="./images/Screenshot 2025-06-26 114450.png" alt="img">
+                <h4>User Explorer</h4>
+                <p>
+                    User Explorer is a simple web app that fetches and displays a list of users from a public API. It includes a real-time search feature to filter users by name.
+                </p>
+                <a href="https://maksymparamud.github.io/user-explorer/" target="_blank">
+                    <button>
+                        Review Project
+                    </button>
+                </a>
+            </div>
+
+            <div class="project-card">
+                <img src="./images/Screenshot 2025-06-26 115014.png" alt="img">
+                <h4>To-Do List</h4>
+                <p>
+                    This is a simple To-Do list app that allows you to add and delete tasks. Data is stored in localStorage, so it doesn't get lost after a page reload.
+                </p>
+                <a href="https://maksymparamud.github.io/to-do-list/" target="_blank">
+                    <button>
+                        Review Project
+                    </button>
+                </a>
+            </div>
+
+        </div>
 
     </section>
 
