feat: add contact section

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                 <p>This is a responsive landing page built with HTML, CSS, and JavaScript.
                     The project demonstrates my ability to create modern, responsive interfaces with clean design, media queries, and basic interactivity using JavaScript (burger menu).
                 </p>
-                <a href="https://maksymparamud.github.io/responsive-landing-page/" target="_blank">
+                <a href="https://github.com/maksymParamud/responsive-landing-page" target="_blank">
                     <button>
                         Review Project
                     </button>
@@ -101,7 +101,7 @@
                 <p>
                     User Explorer is a simple web app that fetches and displays a list of users from a public API. It includes a real-time search feature to filter users by name.
                 </p>
-                <a href="https://maksymparamud.github.io/user-explorer/" target="_blank">
+                <a href="https://github.com/maksymParamud/user-explorer" target="_blank">
                     <button>
                         Review Project
                     </button>
@@ -114,13 +114,43 @@
                 <p>
                     This is a simple To-Do list app that allows you to add and delete tasks. Data is stored in localStorage, so it doesn't get lost after a page reload.
                 </p>
-                <a href="https://maksymparamud.github.io/to-do-list/" target="_blank">
+                <a href="https://github.com/maksymParamud/to-do-list" target="_blank">
                     <button>
                         Review Project
                     </button>
                 </a>
             </div>
 
+        </div>
+
+    </section>
+
+    <section class="contact" id="contact">
+        <div class="header-container">
+            <h2>Contact Me</h2>
+            <p>If you’d like to work together or just say hello — I’m always open to new opportunities!</p>        
+        </div>
+
+
+        <div class="contact-icons">
+            <p>My Email: <span>paramudmaksym72@gmail.com</span></p>
+
+            <div class="contact-links-wrapper">
+                <a class="contact-link" href="https://t.me/Maksym525252" target="_blank">
+                    <img src="./images/icons8-telegram.svg" alt="Telegram icon" height="40px">
+                    Telegram
+                </a>
+
+                <a class="contact-link" href="https://wa.me/393331060923" target="_blank">
+                    <img src="./images/icons8-whatsapp.svg" alt="WhatsApp icon" height="40px">
+                    WhatsApp
+                </a>
+
+                <a class="contact-link" href="https://github.com/maksymParamud" target="_blank">
+                    <img src="./images/icons8-github.svg" alt="GitHub icon" height="40px">
+                    GitHub
+                </a>
+            </div>
         </div>
 
     </section>
