add responsive layout

--- a/index.html
+++ b/index.html
@@ -18,10 +18,15 @@
             Maksym <span>Paramud</span>
         </a>
 
+        <div class="burger-menu">
+            <img src="./images/icons8-menu (2).svg" alt="burger-menu">
+        </div>
+
         <nav>
             <a href="#home">Home</a>
             <a href="#about">About</a>
             <a href="#projects">Projects</a>
+            <a href="#contact">Contact</a>
         </nav>
 
         <a href="#contact">
@@ -128,7 +133,7 @@
     <section class="contact" id="contact">
         <div class="header-container">
             <h2>Contact Me</h2>
-            <p>If you’d like to work together or just say hello — I’m always open to new opportunities!</p>        
+            <p>If you’d like to work together — I’m always open to new opportunities!</p>        
         </div>
 
 
