--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <img src="./images/icons8-menu (2).svg" alt="burger-menu">
         </div>
 
-        <nav>
+        <nav id="navbar">
             <a href="#home">Home</a>
             <a href="#about">About</a>
             <a href="#projects">Projects</a>
